Test/invalid_tests/bad_4.rwlz
// ERROR: Falta tipo de retorno en definición de función
[BepInPlugin("TestMod", "Missing Return Type Test", "1.0")]

/* Error: falta tipo de retorno */

BadFunction() {
    return 42;
}